# glib-itc-rs

./: Cargo.toml  README.adoc  appveyor.yml
examples/: main.rs  multiple-senders.rs
src/: lib.rs  socket_pair.rs  unix.rs  windows.rs
tests/: lib.rs
