[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "GLib inter-thread communication library"
license = "MIT"
name = "glib-itc"
repository = "https://github.com/antoyo/glib-itc-rs"
version = "0.1.4-pre"

[dependencies]
glib = "^0.1.2"
glib-sys = "^0.3.3"
libc = "^0.2.21"
os_pipe = "^0.5.1"

[dev-dependencies]
gtk = "^0.1.2"
