[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "GLib inter-thread communication library"
license = "MIT"
name = "glib-itc"
repository = "https://github.com/antoyo/glib-itc-rs"
version = "0.2.0"

[dependencies]
glib = "^0.3.0"
glib-sys = "^0.4.0"
libc = "^0.2.30"
os_pipe = "^0.6.0"

[dev-dependencies]
gtk = "^0.2.0"
