[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "GLib inter-thread communication library"
license = "MIT"
name = "glib-itc"
repository = "https://github.com/antoyo/glib-itc-rs"
version = "0.4.0"

[dependencies]
glib = "^0.4.0"
glib-sys = "^0.5.0"
libc = "^0.2.30"

[dev-dependencies]
gtk = "^0.3.0"
